--- a/src/app/new-product/new-product.component.html
+++ b/src/app/new-product/new-product.component.html
@@ -1,27 +1,42 @@
+
 <div class="container ">
-<h1>Cadastro de Produto</h1>
+<h1 class = "text-center">Cadastro de Produto</h1>
 <div class="row mt-3 justify-content-center">
-  
+
     <div class="col-9">
-      <form>
+      <form [formGroup]="form" (submit)="cadastrar()">
         <div class="form-group">
-          <label for="nome">Nome</label>
-          <input type="text" class="form-control" id="nome" name="nome"
-          [(ngModel)]="produto.nome">
+          <label for="tipo">Tipo de Produto</label>
+          <select id= "tipo" name="tipo" class="form-select form-select-sm" aria-label=".form-select-sm example"
+          [(ngModel)]="produto.tipo" required>
+          <option>Livro</option>
+          <option>Jogo</option>
+         </select>
         </div>
-  
+
+          <div class="form-group">
+          <label for="nome">Nome</label>
+          <input type="text" class="form-control" id="nome" name="nome">
+          <div class="alert alert-primary" *ngIf="(form.get('nome')?.errors?.required || form.get ('nome')?.errors?.minglength || form.get ('nome')?.errors?.maxlength)">
+            Informe o seu nome (3 a 35 caracteres)!
+          </div>
+        </div>
+
         <div class="form-group">
           <label for="preco">Preço</label>
-          <input type="number" class="form-control" id="preco" name="preco"
-          [(ngModel)]="produto.valorVenda">
+          <input type="number" class="form-control" id="preco" name="preco">
+          <div class="alert alert-primary" *ngIf="(form.get('idade')?.errors?.required || form.get ('idade')?.errors?.minglength || form.get ('idade')?.errors?.maxlength && form.get('idade')?.errors?.min)">
+            Informe o preço do produto!
+          </div>
+
         </div>
-  
+
         <div class="form-group">
           <label for="descricao">Descrição</label> <br>
-          <textarea cols="50" id="descricao" name="descricao" [(ngModel)]="produto.descricao"></textarea>
+          <textarea cols="50" id="descricao" name="descricao"></textarea>
         </div>
-  
-  
+
+
         <button (click)="cadastrar()" type="button" class="btn btn-primary">
           Cadastrar
         </button>
