--- a/src/app/configuracoes/configuracoes.component.html
+++ b/src/app/configuracoes/configuracoes.component.html
@@ -1,69 +1,57 @@
+ 
+<div class="container ">
+  <h1>Configurações: </h1>
+  <div class="row mt-6 justify-content-center">
+    
+      <div class="col-9">
+        <form>
+          <div class="form-group">
+            <label for="codigo">Código</label>
+            <input type="number" class="form-control" id="codigo" name="codigo"
+            [ngModel]="usuario.id" readonly>
+          </div>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<div id= "rectangle1">
-    <div align="center">
-      <h1 id="config-color">Configurações</h1>
-    </div>
-</div>
+          <div class="form-group">
+            <label for="nome">Nome</label>
+            <input type="text" class="form-control" id="nome" name="nome"
+            [(ngModel)]="usuario.nome">
+          </div>
+    
+          <div class="form-group">
+            <label for="preco">Email</label>
+            <input type="email" class="form-control" id="email" name="email"
+            [(ngModel)]="usuario.email">
+          </div>
+    
+          <div class="form-group">
+            <label for="preco">Senha</label>
+            <input type="password" class="form-control" id="senha" name="senha"
+            [(ngModel)]="usuario.senha">
+          </div>
 
-<div id="grey-rectangule" align="center">
-    <div id= "pink-rectangle">
-        <section class="container-fluid">
-            <section class="row justify-content-center">
-                <section class="col-12 col-sm-6 col-md-5">
-        <form class=form-container>
-            <div class= "table-responsive">
-            <table [cellPadding]= 7 clas="table">
-             <tbody>
-                <br>
-                <br>
-                <div align="center">
-                <div class="rounded" id="table-title-background">
-                <thead><h2>Dados Cadastrais</h2></thead>
-                </div>
-                <tr><div class="form-group">
-                    <td><input class="rounded form-control text-light bg-dark" type="text" name="nome" value="" placeholder="Nome" /></td>
-                    <td><input class="form-control text-light bg-dark" type="text" name="sobrenome" value="" placeholder="Sobrenome"/></td>  
-                    </div>
-                </tr>
-                <tr><div class="form-group">
-                    <td><input id="email-box" class="form-control text-light bg-dark" type="text" name="email" value="" placeholder="E-mail" /></td>
-                    </div>
-                </tr>
-                <tr><div class="form-group">
-                    <td><input class="form-control text-light bg-dark" type="text" name="país" value="" placeholder="País" /></td>
-                    <td><input class="form-control text-light bg-dark" type="text" name="cidade" value="" placeholder="Cidade" /></td>
-                    </div>
-                </tr>
-                <tr><div class="form-group">
-                    <td><input class="form-control text-light bg-dark" type="text" name="endereco" value="" placeholder="Endereço" /></td>
-                    <td><input class="form-control text-light bg-dark" type="text" name="bairro" value="" placeholder="Bairro" /></td>
-                    </div>
-                </tr>
-                <tr><div class="form-group">
-                    <td><input class="form-control text-light bg-dark" type="text" name="idade" value="" placeholder="Idade" /></td>
-                    <td> <input class="form-control text-light bg-dark" type="text" name="sexo" value="" placeholder="Sexo" /></td>
-                    </div>
-                </tr>
-                  </div>
-              </tbody>
-            </table>
-            </div>
-        <table [cellPadding]=25>
-            <div align="center">
-            <tbody>
-                <tr><div class="form-group">
-                    <td><a class="btn btn-danger">Cancelar</a></td>
-                    <td><a id="update" class="btn btn-success">Atualizar</a></td>
-                    </div>
-                </tr>
-            </tbody>
-            </div>
-        </table>
+          <div class="form-group">
+            <label for="nome">Idade</label>
+            <input type="number" class="form-control" id="idade" name="idade"
+            [(ngModel)]="usuario.idade">
+          </div>
+
+          <div class="form-group">
+            <label for="nome">Pais: </label>
+            <input type="text" class="form-control" id="endereco" name="endereco"
+            [(ngModel)]="usuario.endereco.pais">
+            <label for="nome">Rua: </label>
+            <input type="text" class="form-control" id="endereco" name="endereco"
+            [(ngModel)]="usuario.endereco.rua">
+          </div>
+    
+          
+          <div class="col-6">
+            <button class="btn btn-success btn-block" (click)="atualizar()">
+              Salvar
+            </button>
+          </div>
         </form>
-        </section>
-    </section>
-</section>
+      </div>
     </div>
-</div>
-
+  </div>
+ 
