--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,43 +5,19 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Menu
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Minhas Compras</a>
-            <a class="dropdown-item" href="#">Minha Estante</a>
-            <a class="dropdown-item" [routerLink] = "['/configuracoes']">Minha Configurações</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Sair</a>
-          </div>
         <li class="nav-item active">
-          <a class="nav-link" [routerLink] = "['/itempage']">Livro <span class="sr-only">(Página dos livros)</span></a>
+          <a class="nav-link btn btn-block" [routerLink] = "['/itempage']">Livros <span class="sr-only">(Página dos livros)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" [routerLink] = "['/itempage']">Jogos <span class="sr-only">(Página dos jogos)</span></a>
+          <a class="nav-link btn btn-block" [routerLink] = "['/gamepage']">Jogos <span class="sr-only">(Página dos jogos)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">CD <span class="sr-only">(Página dos CD's)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">DVD <span class="sr-only">(Página dos DVD's)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">HQ's <span class="sr-only">(Página dos HQ's)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/login">Login<span class="sr-only">(Página de login)</span></a>
+          <a class="nav-link btn btn-block" href="/login">Login<span class="sr-only">(Página de login)</span></a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-        
-      </form>
     </div>
   </nav>
