--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,11 +2,17 @@
 <div class="container">
   
 <div class="jumbotron">
-  <h1 class="display-4">Bem Vindo {{usuario.nome}}!</h1>
-    <p class="lead">Conheça as melhores prateleiras do mundo!</p>
+  
+  <h1 class="display-4">Bem Vindo {{usuario.nome}} {{usuario.sobrenome}}!</h1>
+
+  <p class="lead">Conheça as melhores prateleiras do mundo!</p>
+
   <hr class="my-4">
+
   <p>Compre, venda e faça a troca dos itens guardados em sua prateleira!</p>
   <a class="btn btn-primary btn-lg" [routerLink] = "['/itempage']" role="button">Ver itens</a>
+  <br> <br> <br>
+  <a class="btn btn-secondary btn-lg" [routerLink] = "['/configuracoes', usuario.id]" role="button">Minhas Configurações</a>
   
 </div>
 </div>
