--- a/src/app/item-page/item-page.component.css
+++ b/src/app/item-page/item-page.component.css
@@ -4,10 +4,9 @@ body{
 
 
 div.card{
-  background-color: white;
+  background-color: transparent;
 }
 
 a{
-  background-color: #03dac6;
-  border-color: #03dac6;
+  border-color: whitesmoke;
 }
