--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -13,11 +13,35 @@ h2{
 }
 h1.signIn{
     color: white;
-    font-family: bold;
+    font-family: Open Sans, Gill Sans Extrabold, sans-serif;
 }
 button.btn{
     background-color: #BB86FC;
-    color: black;
+    color: #1c1c1c;
     border-radius: 40px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-weight: bolder;
+    font-family: Open Sans, Gill Sans Extrabold, sans-serif;
+    font-size:24;
 }
+
+input.form-control{
+background-color: #707070;
+border-color: #707070;
+}
+
+::placeholder{
+  color:#dbdbdb;
+}
+
+div.background1{
+ background-color: #1c1c1c!important;
+    color: white!important;
+}
+
+a.alert-link{
+background-color: transparent;
+}
+
+
+
