--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,39 +1,50 @@
 <div class="container-fluid">
-    <div class="row">
-        
-        <div class="col-lg-6">
-                <div class="row">
-                <div class="col-lg-6"> 
-                    <h1 class="display-1">myShelf</h1>
-                    <h2>buy, </h2>
-                    <h2>sell, </h2> 
-                    <h2>trade.</h2>
-                    </div>
-                <div class="col-lg-6"> 
-                    <img [src]="srcLogoImage">
-                    </div> 
-                </div> 
-        </div>
-        
-        <div class="signIn col-lg-6 d-flex justify-content-center">
-            <form>
-                <div class="form-group">
-                    <h1 class="signIn" for="exampleInputEmail1">Sign In</h1>
-                    <input type="email" class="form-control" id="email" name="email" 
-                    [(ngModel)]="usuario.email" placeholder="email">
-                </div>
-                
-                <div class="form-group">
-                    <input type="password" class="form-control" id="senha" name="senha" 
-                    [(ngModel)]="usuario.senha"  placeholder = "senha">
-                </div>
-                
-                <button (click)="realizarLogin()" type="button" class="btn btn-block">Log In</button>
-                <button type="button" class="btn btn-block"
-                [routerLink]="['/signin']">
-                 Sign In
-                </button>
-            </form>
-        </div>
-    </div>
+  <div class="row">
+
+      <div class="col-lg-7">
+              <div class="row">
+              <div class="col-lg-6">
+                  <h1 class="display-1">myShelf</h1>
+                  <h2>buy, </h2>
+                  <h2>sell, </h2>
+                  <h2>trade.</h2>
+                  </div>
+              <div class="col-lg-6">
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <img [src]="srcLogoImage">
+                  </div>
+              </div>
+      </div>
+
+      <div class="signIn col-lg-4 d-flex justify-content-center">
+          <form [formGroup] = "form" (ngSubmit) ="realizarLogin()" >
+              <div class="form-group">
+                  <h1 class="signIn" for="exampleInputEmail1">Sign In</h1>
+                  <input type="email" class="form-control" id="email" name="email" placeholder="E-mail" formControlName = "email">
+                  <div class="alert alert-info" *ngIf="(form.get('email')?.errors?.required || form.get ('email')?.errors?.minglength || form.get ('email')?.errors?.maxlength)">
+                    <a class="alert-link"> Informe o e-mail corretamente (De 8 até 40 caracteres)</a>
+                  </div>
+              </div>
+
+              <div class="form-group">
+                  <input type="password" class="form-control" id="senha" name="senha" placeholder = "Senha" formControlName = "senha">
+                  <div class="alert alert-info" *ngIf="(form.get('senha')?.errors?.required || form.get ('senha')?.errors?.minglength || form.get ('senha')?.errors?.maxlength)">
+                    <a class="alert-link">Informe sua senha (Mínimo 6 caracteres)</a>
+                  </div>
+              </div>
+
+              <button [disabled]="!form.valid" type="button" class="btn btn-block">Log In</button>
+              <button type="button" class="btn btn-block"
+              [routerLink]="['/signin']">
+               Sign In
+              </button>
+          </form>
+      </div>
+  </div>
+  <br>
+  <br>
+  <br>
 </div>
