--- a/src/app/update-product/update-product.component.html
+++ b/src/app/update-product/update-product.component.html
@@ -2,38 +2,41 @@
     <div class="col-9">
       <form>
         <div class="text-center">
-          <img [src]="produto.imagem" >
+          <img [src]="produto.imagem">
         </div>
-  
+
         <div class="form-group">
           <label for="codigo">Código</label>
           <input type="number" class="form-control" id="codigo" name="codigo"
           [ngModel]="produto.id" readonly>
         </div>
-  
+
         <div class="form-group">
           <label for="nome">Nome</label>
           <input type="text" class="form-control" id="nome" name="nome"
           [(ngModel)]="produto.nome">
         </div>
-  
+
         <div class="form-group">
           <label for="preco">Preço</label>
           <input type="number" class="form-control" id="preco" name="preco"
           [(ngModel)]="produto.valorVenda">
         </div>
-  
-        <div class="form-group">
-          <label for="status">Status</label>
-          <input type="text" class="form-control" id="status" name="status"
-          [(ngModel)]="produto.status">
-        </div>
-  
+
         <div class="form-group">
           <label for="descricao">Descrição</label>
           <textarea class="form-control" id="descricao" name="descricao" [(ngModel)]="produto.descricao"></textarea>
         </div>
-  
+
+        <div class="form-group">
+          <label for="tipo">Tipo de Produto</label>
+          <select id= "tipo" name="tipo" class="form-select form-select-sm" aria-label=".form-select-sm example"
+          [(ngModel)]="produto.tipo" required>
+          <option>Livro</option>
+          <option>Jogo</option>
+         </select>
+        </div>
+
         <div class="row">
           <div class="col-6">
             <button class="btn btn-secondary btn-block" (click)="deletar()">
@@ -46,9 +49,9 @@
             </button>
           </div>
         </div>
-  
-  
-  
+
+
+
       </form>
     </div>
   </div>
